add ability to define multiple allowed origins

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ PORT=9999
 # no trailing slash
 APP_URL=https://spicyazisaban.example.com
 
+# additionally, accepts requests that has origin that ends with hosts, separated by comma.
+ADDITIONAL_CORS=.spicyazisaban.pages.dev
+
 # mysql server configuration
 DB_HOST=localhost
 DB_NAME=spicyazisaban
