Add support for Discord

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ MAIL_PORT=
 MAIL_USER=
 MAIL_PASSWORD=
 MAIL_FROM=spicyazisaban@example.com
+
+# Create your application from https://discord.com/developers/applications and copy & paste client id and secret here
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
