Add rate limits to end points
also:
- Don't return email for non-admin users when using /i_users/get/:id
- Add `discord` mail driver

--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,16 @@ DB_PASSWORD=naetao
 
 # "smtp", "log" are supported (default: "log")
 MAIL_DRIVER=log
+MAIL_FROM=spicyazisaban@example.com
+
+# This is used only if MAIL_DRIVER is "discord".
+MAIL_DISCORD_WEBHOOK=
+
+# These are used only if MAIL_DRIVER is "smtp"
 MAIL_HOST=
 MAIL_PORT=
 MAIL_USER=
 MAIL_PASSWORD=
-MAIL_FROM=spicyazisaban@example.com
 
 # Create your application from https://discord.com/developers/applications and copy & paste client id and secret here
 DISCORD_CLIENT_ID=
